embassy-executor/tests/ui/nonstatic_struct_anon.stderr
error: Arguments for tasks must live forever. Try using the `'static` lifetime.
 --> tests/ui/nonstatic_struct_anon.rs:6:23
  |
6 | async fn task(_x: Foo<'_>) {}
  |                       ^^
